--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
     transform: scale(1.1);
 }
 
+.counter-controls button {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  font-size: 14px;
+}
         .hospital-item {
             background: white;
             border-radius: 10px;
