--- a/index.html
+++ b/index.html
@@ -1787,7 +1787,7 @@ document.getElementById('toggleMethaneBtn').addEventListener('click', () => {
     const btn = document.getElementById('toggleMethaneBtn');
     if (methaneSection.style.display === 'none') {
         methaneSection.style.display = 'block';
-        btn.textContent = 'Ocultar METHANE';
+        btn.textContent = 'METHANE';
     } else {
         methaneSection.style.display = 'none';
         btn.textContent = 'METHANE';
@@ -1800,7 +1800,7 @@ document.getElementById('toggleMethaneBtn').addEventListener('click', () => {
             const isHidden = obitosSection.classList.contains('hidden');
             if (obitosSection.style.display === 'none') {
                 obitosSection.style.display = 'block';
-                btn.textContent = 'Ocultar ÓBITOS';
+                btn.textContent = 'ÓBITOS';
             } else {
                 obitosSection.style.display = 'none';
                 btn.textContent = 'ÓBITOS';    
@@ -1813,7 +1813,7 @@ document.getElementById('toggleMethaneBtn').addEventListener('click', () => {
             const isHidden = EvacuadosSection.classList.contains('hidden');
             if (EvacuadosSection.style.display === 'none') {
                 EvacuadosSection.style.display = 'block';
-                btn.textContent = 'Ocultar EVACUADOS';
+                btn.textContent = 'EVACUADOS';
             } else {
                 EvacuadosSection.style.display = 'none';
                 btn.textContent = 'EVACUADOS';    
